binance4j-documentation/versioned_docs/version-2.3.0/30-endpoints/70-margin.mdx
---
title: Margin
---

import ArtifactInstall from "../partials/_ArtifactInstall.mdx";
import RepoBadges from "../partials/_RepoBadges.mdx";
import Examples from "@site/src/components/v2/ApiExamples";

<RepoBadges artifact="margin" />

## Installation

<ArtifactInstall repo="margin" />

## Client instantiation

```java
MarginClient client = new MarginClient(key, secret);
```

## Features

### Execute transfer between spot account and cross margin account

<Examples
    payload="Transaction"
    method="transfer"
    items={[
        {
            label: "Spot to Margin",
            params: "new TransferParams(asset, amount, TransferType.MAIN_TO_MARGIN)",
        },
        {
            label: "Margin to spot",
            params: "new TransferParams(asset, amount, TransferType.MARGIN_TO_MAIN)",
        },
    ]}
/>

### Apply for a loan

<Examples
    payload="Transaction"
    method="borrow"
    items={[
        {
            params: "new BorrowParams(asset, amount, symbol, isIsolated)",
        },
    ]}
/>

### Repay loan

<Examples
    payload="Transaction"
    method="repay"
    items={[
        {
            label: "",
            params: "new RepayParams(asset, amount, symbol, isIsolated)",
        },
    ]}
/>

### Get info about an asset

<Examples
    payload="Asset"
    method="getAsset"
    items={[
        {
            params: "new AssetParams(asset)",
        },
    ]}
/>

### Get info about all assets

<Examples payload="List<Asset>" method="getAllAssets" items={[{}]} />

### Get info about a cross margin pair

<Examples
    payload="CrossSymbol"
    method="getCrossMarginPair"
    items={[
        {
            params: "new PairParams(symbol)",
        },
    ]}
/>

### Gets the price Index of a symbol

<Examples
    payload="PriceIndex"
    method="getPriceIndex"
    items={[
        {
            params: "new PriceIndexParams(symbol)",
        },
    ]}
/>

### Post a new order

<Examples
    payload="NewOrderRecord"
    method="newOrder"
    items={[
        {
            label: "Market purchase",
            params: "NewOrderParams.buy(symbol, amount)",
        },
        {
            label: "Market sale",
            params: "NewOrderParams.sell(symbol, amount)",
        },
        {
            label: "Limit purchase",
            params: "NewOrderParams.buy(symbol, amount, price)",
        },
        {
            label: "Limit sale",
            params: "NewOrderParams.sell(symbol, amount, price)",
        },
        {
            label: "Market purchase with quote asset",
            params: "NewOrderParams.buyQuote(symbol, amount)",
        },
        {
            label: "Market sale with quote asset",
            params: "NewOrderParams.sellQuote(symbol, amount)",
        },
    ]}
/>

### Cancel an active order

<Examples
    payload="CancelOrderResponse"
    method="cancelOrder"
    items={[
        {
            params: "new CancelOrderParams(symbol, orderId)",
        },
    ]}
/>

### Cancel open orders

<Examples
    payload="List<CancelOrderResponse>"
    method="cancelOpenOrders"
    items={[
        {
            params: "new CancelOpenOrdersParams(symbol)",
        },
    ]}
/>

### Get cross margin transfer history

<Examples
    payload="TransferRecords"
    method="getTransferHistory"
    items={[
        {
            label: "All",
        },
        {
            label: "By asset",
            params: "new TransactionHistoryParams(asset)",
        },
        {
            label: "By transaction",
            params: "new TransactionHistoryParams(asset, tansactionId)",
        },
        {
            label: "Framed and paginated",
            params: "new TransactionHistoryParams(asset, tansactionId), new FramedPaging(startTime, endTime, page, limit)",
        },
    ]}
/>

### Get loan Record

<Examples
    payload="LoanRecord"
    method="getLoanRecord"
    items={[
        {
            label: "By asset",
            params: "new TransactionHistoryParams(asset)",
        },
        {
            label: "By transaction",
            params: "new TransactionHistoryParams(asset, tansactionId)",
        },
        {
            label: "Framed and paginated",
            params: "new TransactionHistoryParams(asset, tansactionId), new FramedPaging(startTime, endTime, page, limit)",
        },
    ]}
/>

### Get repay Record

<Examples
    payload="RepayRecords"
    method="getRepayRecord"
    items={[
        {
            label: "By asset",
            params: "new TransactionHistoryParams(asset)",
        },
        {
            label: "By transaction",
            params: "new TransactionHistoryParams(asset, tansactionId)",
        },
        {
            label: "Framed and paginated",
            params: "new TransactionHistoryParams(asset, tansactionId), new FramedPaging(startTime, endTime, page, limit)",
        },
    ]}
/>

### Get interest history

<Examples
    payload="InterestHistory"
    method="getInterestHistory"
    items={[
        {
            label: "By asset",
            params: "new TransactionHistoryParams(asset)",
        },
        {
            label: "By transaction",
            params: "new TransactionHistoryParams(asset, tansactionId)",
        },
        {
            label: "Framed and paginated",
            params: "new TransactionHistoryParams(asset, tansactionId), new FramedPaging(startTime, endTime, page, limit)",
        },
    ]}
/>

### Get force liquidation record

<Examples
    payload="ForceLiquidationRecords"
    method="getForceLiquidationRecord"
    items={[
        {
            params: "new ForceLiquidationRecordParams(isolatedSymbol)",
        },
        {
            label: "Framed and paginated",
            params: "new ForceLiquidationRecordParams(isolatedSymbol, new FramedPaging(startTime, endTime, page, limit))",
        },
    ]}
/>

:::note
Response in descending order.
:::

### Get Margin account details

<Examples payload="Account" method="getAccount" items={[{}]} />

### Get order status.

<Examples
    payload="OrderInfo"
    method="getOrder"
    items={[
        {
            label: "By symbol",
            params: "new OrderParams(symbol, isIsolated)",
        },
        {
            label: "By order id",
            params: "new OrderParams(symbol, orderId, isIsolated)",
        },
    ]}
/>

### Get open orders

<Examples
    payload="List<OrderInfo>"
    method="getOpenOrders"
    items={[
        {
            label: "All",
        },
        {
            label: "By symbol",
            params: "new OpenOrdersParams(symbol, isIsolated)",
        },
    ]}
/>

### Get all orders

<Examples
    payload="List<OrderInfo>"
    method="getAllOrders"
    items={[
        {
            params: "new AllOrdersParams(symbol, orderId, isIsolated)",
        },
        {
            label: "Framed",
            params: "new AllOrdersParams(symbol, orderId, isIsolated), new TimeFrame(startTime, endTime, limit)",
        },
    ]}
/>

### Send OCO order

<Examples
    payload="NewOCOOrderRecord"
    method="newOCO"
    items={[
        {
            label: "Stop limit order",
            params: "new NewOCOOrderParams(symbol, OrderSide.BUY, quantity, price, stopPrice, stopPrice, TimeInForce.GTC)",
        },
    ]}
/>

### Cancel OCO order

<Examples
    payload="NewOCOOrderRecord"
    method="cancelOCO"
    items={[
        {
            label: "By symbol",
            params: "new CancelOCOParams(symbol, isIsolated)",
        },
        {
            label: "By order id",
            params: "new CancelOCOParams(symbol, orderId, isIsolated)",
        },
    ]}
/>

### Get OCO order

<Examples
    payload="OCOOrderRecord"
    method="getOCO"
    items={[
        {
            label: "By symbol",
            params: "new GetOCOParams(symbol, isIsolated)",
        },
        {
            label: "By order id",
            params: "new GetOCOParams(symbol, orderId, isIsolated)",
        },
    ]}
/>

### Get all OCO

<Examples
    payload="List<OCOOrderRecord>"
    method="getAllOCO"
    items={[
        {
            label: "By symbol",
            params: "new GetAllOCOParams(symbol, isIsolated)",
        },
        {
            label: "From order id",
            params: "new GetAllOCOParams(symbol, fromId, isIsolated)",
        },
        {
            label: "Framed",
            params: "new GetAllOCOParams(symbol, fromId, isIsolated), new TimeFrame(startTime, endTime, limit)",
        },
    ]}
/>

### get open OCO

<Examples
    payload="List<OCOOrderRecord>"
    method="getOpenOCO"
    items={[
        {
            label: "All",
        },
        {
            label: "By symbol",
            params: "new GetOpenOCOParams(symbol, isIsolated)",
        },
    ]}
/>

### Get trades

<Examples
    payload="List<Trade>"
    method="getTrades"
    items={[
        {
            label: "By symbol",
            params: "new TradeParams(symbol, isIsolated)",
        },
        {
            label: "From order id",
            params: "new TradeParams(symbol, fromId, isIsolated)",
        },
        {
            label: "Framed",
            params: "new TradeParams(symbol), new TimeFrame(startTime, endTime, limit)",
        },
    ]}
/>

### Query Max Borrow

<Examples
    payload="MaxBorrowable"
    method="getMaxBorrowable"
    items={[
        {
            params: "new MaxBorrowable(amount, borrowLimit)",
        },
    ]}
/>

### Query Max Transfer-Out Amount

<Examples
    payload="MaxTransferable"
    method="getMaxTransferable"
    items={[
        {
            label: "",
            params: "new MaxTransferableParams(asset, isolatedSymbol)",
        },
    ]}
/>

### Make an isolated margin account transfer

<Examples
    payload="IsolatedTransferRecords"
    method="newIsolatedTransfer"
    items={[
        {
            params: "new NewIsolatedTransferParams(asset, symbol, amount, transFrom, transTo)",
        },
    ]}
/>

### Get isolated margin transfer history

<Examples
    payload="IsolatedTransferRecords"
    method="getIsolatedTransferHistory"
    items={[
        {
            label: "By symbol",
            params: "new IsolatedTransferHistoryParams(symbol)",
        },
        {
            label: "By symbol and isolated asset",
            params: "new IsolatedTransferHistoryParams(symbol, asset)",
        },
        {
            label: "With transfer direction",
            params: "new IsolatedTransferHistoryParams(symbol, asset, transFrom, transTo)",
        },
        {
            label: "Framed and paginated",
            params: "new IsolatedTransferHistoryParams(symbol, asset, transFrom, transTo), new FramedPaging(startTime, endTime, page, limit)",
        },
    ]}
/>

### Query isolated margin account info

<Examples
    payload="IsolatedAccount"
    method="getIsolatedAccount"
    items={[
        {
            label: "All",
            params: "",
        },
        {
            label: "By symbol",
            params: "new IsolatedAccountParams(symbols)",
        },
    ]}
/>

### Enable isolated margin account for a specific symbol

<Examples
    payload="ToogleAccountResponse"
    method="enableIsolatedAccount"
    items={[
        {
            params: "new ToogleAccountParams(symbol)",
        },
    ]}
/>

### Disable isolated margin account for a specific symbol

<Examples
    payload="ToogleAccountResponse"
    method="disableIsolatedAccount"
    items={[
        {
            params: "new ToogleAccountParams(symbol)",
        },
    ]}
/>

### Query enabled isolated margin account limit

<Examples payload="IsolatedAccountLimit" method="getEnabledIsolatedAccountLimit" items={[{}]} />

### Get info about an isolated symbol

<Examples
    payload="IsolatedSymbol"
    method="getIsolatedSymbol"
    items={[
        {
            params: "new PairParams(symbol)",
        },
    ]}
/>

### Get info about all the isolated symbols.

<Examples payload="List<IsolatedSymbol>" method="getAllIsolatedSymbols" items={[{}]} />

### Toggle BNB Burn On Spot Trade And Margin Interest

<Examples
    payload="BNBBurnStatus"
    method="toggleBNBBurnOnSpotTradeAndMarginInterest"
    items={[
        {
            params: "new ToggleBurnParams(spotBNBBurn, interestBNBBurn)",
        },
    ]}
/>

### Get BNB Burn Status

<Examples payload="BNBBurnStatus" method="getBNBBurnStatus" items={[{}]} />

### Query Margin Interest Rate History

<Examples
    payload="List<InterestRate>"
    method="getInterestRateHistory"
    items={[
        {
            label: "By symbol",
            params: "new InterestRateHistoryParams(asset)",
        },
        {
            label: "With VIP level",
            params: "new InterestRateHistoryParams(asset, vipLevel)",
        },
    ]}
/>

### Get cross margin fee data

<Examples
    payload="List<CrossFee>"
    method="getMarginFeeData"
    items={[
        {
            label: "All",
        },
        {
            label: "By coin",
            params: "CrossFeeParams(coin)",
        },
        {
            label: "By coin and VIP level",
            params: "CrossFeeParams(coin, vipLevel)",
        },
    ]}
/>

### Get isolated margin fee data

<Examples
    payload="List<IsolatedFee>"
    method="getIsolatedFeeData"
    items={[
        {
            label: "All",
        },
        {
            label: "By coin",
            params: "IsolatedFeeParams(coin)",
        },
        {
            label: "By coin and VIP level",
            params: "IsolatedFeeParams(coin, vipLevel)",
        },
    ]}
/>

### Get isolated margin tier data

<Examples
    payload="List<IsolatedTierData>"
    method="getIsolatedMarginTierData"
    items={[
        {
            label: "All tiers",
            params: "new IsolatedTierDataParams(symbol)",
        },
        {
            label: "By tier",
            params: "new IsolatedTierDataParams(symbol, tier)",
        },
    ]}
/>

### Get order rate limit

<Examples
    payload="List<OrderRateLimit>"
    method="getOrderRateLimit"
    items={[
        {
            label: "All",
        },
        {
            label: "By isolated symbol",
            params: "new RateLimitParams(symbol, true)",
        },
    ]}
/>

### Get dust log (conversions into BNB of dust assets)

<Examples
    payload="DustLogRecord"
    method="getDustLog"
    items={[
        {
            label: "All",
        },
        {
            label: "Framed",
            params: "new TimeFrame(Long startTime, Long endTime)",
        },
    ]}
/>
